# collatz2

./: CMakeLists.txt  README.md
src/: candidates_file.cpp  candidates_file.h  cleared_file.cpp  cleared_file.h  csv_file.cpp  csv_file.h  main.cpp  math256.cpp  math256.h  worktodo_file.cpp  worktodo_file.h
